salvar usuario dependecias de seguranca